<resources>
    <string name="app_name">SPH</string>
    <string name="year_text">Year</string>
    <string name="volume_text">Volume</string>
    <string name="no_internet_connection_text">No Internet Connection</string>
    <string name="alert_title_text">Decreased volume detail</string>
    <string name="ok">Ok</string>

</resources>
