...
        android:text="@string/volume_text"
        android:textSize="@dimen/text_medium"
        app:layout_constraintTop_toBottomOf="@id/tv_year"
        app:layout_constraintLeft_toLeftOf="parent"
        />
    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_decrease"
        android:layout_width="35dp"
        android:layout_height="35dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:src="@drawable/icon_decrease"
...
